@@ -108,6 +108,7 @@ dillo-fltk2
  - Moved charset decoding into cache.
  - Implemented OBJECT as link (similar to FRAME).
  - Enabled the file dpi to look inside gzipped files.
+ - Allowed form inputs outside FORM (it's in the standard).
    Patches: place (AKA corvid)
 +- Fixed a problem with locally-installed dpis.
  - Added code for optional image loading (nice interface) very advanced!
